--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,6 +28,10 @@ html body {
   width: 32em;
   height: 33px;
   border-radius: 15px 0 0 15px;
+  outline: none;
+  text-align: center;
+  margin-right: 0;
+  box-shadow: 0px 10px 13px -7px #000000, 2px 35px 50px 0px rgba(0, 0, 0, 0.25);
 }
 .form-container .inputBtn {
   width: 7em;
@@ -35,18 +39,18 @@ html body {
   border-radius: 0 15px 15px 0;
   background-color: black;
   color: white;
+  transform: translateX(-5px);
 }
 .form-container .inputBox,
 .form-container .inputBtn {
   margin-top: 50px;
   border: none;
-  list-style: none;
-  box-shadow: 0px 10px 13px -7px #000000, 2px 35px 50px 0px rgba(0, 0, 0, 0.25);
 }
 .form-container .inputBtn:hover {
-  transition: 0.5s all ease;
-  transform: scale(1.2);
+  transition: 0.2s all ease;
+  transform: scale(1.1);
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .list-container {
