--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -2,3 +2,5 @@ $bkg-color: linear-gradient(to bottom, #1cab00, #ffffffff);
 $form-text-color: white;
 $task-box-bkg: #1dab002d;
 $box-shadow: 0px 10px 13px -7px #000000, 2px 35px 50px 0px rgba(0, 0, 0, 0.25);
+$submit-btn-bkg: black;
+$submit-btn-bkg-hover: rgba(0, 0, 0, 0.7);
