--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,3 +2,4 @@
 @import "./layout/general";
 @import "./modules/form-container";
 @import "./modules/list-container";
+@import "./modules/reference";
