--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -3,4 +3,9 @@ $form-text-color: white;
 $task-box-bkg: #1dab002d;
 $box-shadow: 0px 10px 13px -7px #000000, 2px 35px 50px 0px rgba(0, 0, 0, 0.25);
 $submit-btn-bkg: black;
-$submit-btn-bkg-hover: rgba(0, 0, 0, 0.7);
+// $submit-btn-bkg-hover: rgba(0, 0, 0, 0.7);
+$reference-color: black;
+$task-bkg: rgba(255, 255, 255, 0.3);
+$font: "Shadows Into Light", cursive;
+$task_list_item_bs: 0px 10px 13px -7px #13131355,
+  2px 35px 70px 0px rgba(55, 55, 55, 0.12);
