--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 html {
   width: 100%;
   height: 100vh;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: "Shadows Into Light", cursive;
   color: white;
   padding-top: 25px;
 }
@@ -39,7 +39,7 @@ html body {
   border-radius: 0 15px 15px 0;
   background-color: black;
   color: white;
-  transform: translateX(-5px);
+  transform: translateX(-15px);
 }
 .form-container .inputBox,
 .form-container .inputBtn {
@@ -48,9 +48,12 @@ html body {
 }
 .form-container .inputBtn:hover {
   transition: 0.2s all ease;
-  transform: scale(1.1);
+  transform: scale(1.2);
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.7);
+}
+.form-container .inputBox::placeholder {
+  font-family: "Shadows Into Light", cursive;
+  font-weight: bold;
 }
 
 .list-container {
@@ -60,6 +63,36 @@ html body {
   border-radius: 15px;
   box-shadow: 0px 10px 13px -7px #000000, 2px 35px 50px 0px rgba(0, 0, 0, 0.25);
   margin-top: 15px;
+  overflow-y: scroll;
+  padding: 5px;
+  color: black;
+}
+.list-container .task_details {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid red;
+  width: 100%;
+  height: 60px;
+  margin-top: 25px;
+  padding-left: 5px;
+}
+.list-container .task {
+  border: 1px solid blue;
+  width: 75%;
+}
+.list-container .checkDelete {
+  border: 1px solid yellow;
+  width: 20%;
+}
+
+.list-container::-webkit-scrollbar {
+  display: none;
+}
+
+.reference {
+  color: black;
+  margin-top: 20px;
+  margin-left: 200px;
 }
 
 /*# sourceMappingURL=style.css.map */
