--- a/src/scss/layout/_general.scss
+++ b/src/scss/layout/_general.scss
@@ -7,7 +7,7 @@
 html {
   width: 100%;
   height: 100vh;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: $font;
   color: $form-text-color;
   padding-top: 25px;
   body {
