--- a/src/scss/modules/_list-container.scss
+++ b/src/scss/modules/_list-container.scss
@@ -5,4 +5,39 @@
   border-radius: 15px;
   box-shadow: $box-shadow;
   margin-top: 15px;
+  overflow-y: scroll;
+  padding: 5px;
+  color: $reference-color;
+
+  .task_details {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid red;
+    width: 100%;
+    height: 60px;
+    margin-top: 25px;
+    padding-left: 5px;
+  }
+
+  .task {
+    border: 1px solid blue;
+    width: 75%;
+    // box-shadow: $task_list_item_bs;
+    // background-color: $task-bkg;
+    //   color: $reference-color;
+    //   width: 25em;
+    //   border-radius: 15px;
+    //   margin-left: 15px;
+    //   margin-top: 30px;
+    //   text-align: center;
+  }
+  .checkDelete {
+    border: 1px solid yellow;
+    width: 20%;
+  }
+}
+
+// Hiding the scrollbar.
+.list-container::-webkit-scrollbar {
+  display: none;
 }
