--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,19 +70,34 @@ html body {
 .list-container .task_details {
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
   width: 100%;
   height: 60px;
   margin-top: 25px;
   padding-left: 5px;
 }
-.list-container .task {
-  border: 1px solid blue;
-  width: 75%;
+.list-container .task_details .task {
+  border-right: 1px solid rgba(0, 0, 0, 0.307);
+  width: 80%;
 }
-.list-container .checkDelete {
-  border: 1px solid yellow;
-  width: 20%;
+.list-container .task_details .checkDelete {
+  width: 18%;
+}
+.list-container .task_details .checkDelete button:hover {
+  cursor: pointer;
+  transition: 0.3s all ease;
+  transform: scale(1.3);
+}
+.list-container .task_details .checkDelete .checkBtn,
+.list-container .task_details .checkDelete .deleteBtn {
+  background: none;
+  border: none;
+  margin-top: 12px;
+  margin-left: 10px;
+}
+.list-container .task_details .checkDelete .checkImg,
+.list-container .task_details .checkDelete .deleteImg {
+  width: 25px;
+  height: 25px;
 }
 
 .list-container::-webkit-scrollbar {
