--- a/src/scss/modules/_list-container.scss
+++ b/src/scss/modules/_list-container.scss
@@ -12,28 +12,37 @@
   .task_details {
     display: flex;
     justify-content: space-between;
-    border: 1px solid red;
     width: 100%;
     height: 60px;
     margin-top: 25px;
     padding-left: 5px;
-  }
 
-  .task {
-    border: 1px solid blue;
-    width: 75%;
-    // box-shadow: $task_list_item_bs;
-    // background-color: $task-bkg;
-    //   color: $reference-color;
-    //   width: 25em;
-    //   border-radius: 15px;
-    //   margin-left: 15px;
-    //   margin-top: 30px;
-    //   text-align: center;
-  }
-  .checkDelete {
-    border: 1px solid yellow;
-    width: 20%;
+    .task {
+      border-right: 1px solid $border;
+      width: 80%;
+    }
+
+    .checkDelete {
+      width: 18%;
+
+      button:hover {
+        cursor: pointer;
+        transition: 0.3s all ease;
+        transform: scale(1.3);
+      }
+      .checkBtn,
+      .deleteBtn {
+        background: none;
+        border: none;
+        margin-top: 12px;
+        margin-left: 10px;
+      }
+      .checkImg,
+      .deleteImg {
+        width: 25px;
+        height: 25px;
+      }
+    }
   }
 }
 
